--- a/stops/1.md
+++ b/stops/1.md
@@ -2,26 +2,14 @@
 layout: episode
 permalink: /stops/1/
 type: stop
-section_title: Introduction
-title: Welcome to the first stop in the tour
+section_title: INTRODUCCIÓN
+title: Gladys Turner Bosso sobre la exposición Voces en Off
 page_rank: 1
 stop_id: 1
-audio_file: NASA_main_APU_Shutdown.mp3
+audio_file: MACPanama_VocesEnOff_01.m4a
 hero_images:
- - path: 01-introduction-01.jpg
-   alt_text: First example photo for stop 1
- - path: 01-introduction-02.jpg
-   alt_text: Second example photo for stop 1
+ - path: 01-00.png
+   alt_text: 
+ - path: 01-01.jpg
+   alt_text: Gladys Turner Bosso
 ---
-
-Replace this section of text with the full transcript of your audio guide stop. Use a second level heading to flag the person speaking
-
-## Person speaking (second level heading)
-
-> And this blockquote is styled to make it clear that this section really is someone speaking.
-
-And we can go back to a normal transcript.
-
-### A third level heading
-
-The example audio used here is borrowed from [NASA](http://www.nasa.gov/connect/sounds/index.html#Discovery) under the terms of their [usage guidelines](http://www.nasa.gov/multimedia/guidelines/index.html). This is just a test clip, so you'll need to replace it!
