replaced .m4a & .m4v files with mono 64kbps .mp3

--- a/stops/1.md
+++ b/stops/1.md
@@ -6,7 +6,7 @@ section_title: INTRODUCCIÓN
 title: Gladys Turner Bosso sobre la exposición Voces en Off
 page_rank: 1
 stop_id: 1
-audio_file: MACPanama_VocesEnOff_01.m4a
+audio_file: MACPanama_VocesEnOff_01_GladysTurnerBosso.mp3
 hero_images:
  - path: 01-00.png
    alt_text: 
