--- a/stops/2.md
+++ b/stops/2.md
@@ -6,7 +6,7 @@ section_title: IRAIDA ICAZA
 title: ¿Entre el arte y la ciencia hay algún punto de encuentro?
 page_rank: 2
 stop_id: 2
-audio_file: MACPanama_VocesEnOff_02.m4a
+audio_file: MACPanama_VocesEnOff_02_IraidaIcaza.mp3
 hero_images:
  - path: 02-01.jpg
    alt_text: Iraida Icaza
