--- a/stops/3.md
+++ b/stops/3.md
@@ -6,7 +6,7 @@ section_title: ISABEL DE OBALDÍA
 title: ¿Qué representa “Irga tará” en la obra de Isabel De Obaldía?
 page_rank: 3
 stop_id: 3
-audio_file: MACPanama_VocesEnOff_03.m4a
+audio_file: MACPanama_VocesEnOff_03_IsabelDeObaldia.mp3
 hero_images:
 hero_images:
  - path: 03-01.jpg
