--- a/stops/4.md
+++ b/stops/4.md
@@ -6,7 +6,7 @@ section_title: JACQUELINE BRANDWAYN
 title: ¿Por qué la "zorra", la "perra" y la "cerda"?
 page_rank: 4
 stop_id: 4
-audio_file: MACPanama_VocesEnOff_04.m4a
+audio_file: MACPanama_VocesEnOff_04_JacquelineBrandwayn.mp3
 hero_images:
 hero_images:
  - path: 04-01.jpg
