--- a/stops/5.md
+++ b/stops/5.md
@@ -6,7 +6,7 @@ section_title: NANCY FRIEDEMANN-SÁNCHEZ
 title: ¿Que asuntos abordas desde tu propuesta artística?
 page_rank: 5
 stop_id: 5
-audio_file: MACPanama_VocesEnOff_05.m4v
+audio_file: MACPanama_VocesEnOff_05_NancyFriedemann-Sanchez.mp3
 hero_images:
 hero_images:
  - path: 05-01.jpg
